# scHLAcount

./: .travis.yml  Cargo.toml  LICENSE  README.md  editdistancealleles.py  prepare_reference.sh
ci/: before_deploy.sh  script.sh  sha256.sh  utils.sh
paper/: AML_508084.txt  AML_548327.txt  AML_721214.txt  AML_782328.txt  AML_809653.txt  donor1.txt  donor2.txt  donor3.txt  donor4.txt  figure2.R  figure3.R  figureS2.R  main.tex  sample_gt.txt  schlacount.bib  table1_AML_DRB1.tsv  table2_AML_C.tsv  table4_paulson_discovery.R
src/: config.rs  em.rs  hla.rs  io.rs  lib.rs  locus.rs  main.rs  mapping.rs
test/: cds_ABC_fourgenotypes.fa  fourgenotypes.txt  genomic_ABC_fourgenotypes.fa  test_allele_fasta.mtx  test_call.mtx
test/fake_db/: hla_nuc.fasta.idx
