[package]
name = "sc_hla_count"
version = "0.1.0"
authors = ["Charlotte Darby <cdarby@jhu.edu>", "Ian Fiddes <ian.t.fiddes@gmail.com>", "Patrick Marks <patrick@10xgenomics.com>"]

[dependencies]
bio = "0.25"
clap = "*"
csv = "1"
debruijn = { git = "https://github.com/10XGenomics/rust-debruijn" }
debruijn_mapping = { git = "https://github.com/10XGenomics/rust-pseudoaligner.git", rev = "ae4aadbce921d3233e3bd9b3ee8a8466804b20ad" }
failure = "*"
human-panic = "1.0.1"
itertools = "0.8"
log = "*"
regex = "1"
rust-htslib = "0.25.0"
serde = "1.0"
simplelog = "0.5.0"
sprs = "*"
tempfile = "*"
terminal_size = "*"

[dependencies.smallvec]
features = ["serde"]
version = "0.6.8"

[profile.release]
debug = true
